in Skia raster mode cache even enlarging of images (tdf#134160)

Change-Id: I842b55cd922eb0e411fd7450e84224b41ba82a2c